# MathSnap-AI

./: .gitignore  .vercelignore  README.md  analyze_errors.py  config.py  crohme23.csv  data_preprocessing.ipynb  debug_inference.py  eval.py  evaluate.py  evaluate_external.py  index.html  inference.py  main.py  package-lock.json  package.json  pyproject.toml  read_pdf.py  split_csv.py  train.py  train_dwap.py  train_namer.py  vercel.json  vocab.json
.claude/: launch.json  settings.local.json
api/: chat.js  predict.js
backend/: analyze_dataset.py  main.py  requirements.txt  vocab.json
checkpoints/: model_weights.pt
data/: __init__.py  dataset.py  symlg_parser.py  vocab.py
deployment/huggingface/: Dockerfile  README.md  app.py  requirements.txt  setup_hf_space.py
deployment/huggingface/data/: vocab.py
deployment/huggingface/models/: __init__.py  decoder.py  model.py  pos_enc.py
doc/: main.aux  main.bcf  main.out  main.tex  main.toc
guidelines/: Guidelines.md
models/: __init__.py  decoder.py  dwap.py  encoder.py  model.py  namer.py  pgd.py  vat.py
models/transformer/: attention.py  transformer_decoder.py
outputs/: eval_external_results.json  eval_results.json  history.json
scripts/: gen_dataset_stats.py
src/: mathwriting-reader.ipynb
src/app/: App.tsx
src/app/components/: convert-page.tsx  dashboard-page.tsx  header.tsx  home-page.tsx  latex-preview.tsx  settings-page.tsx
src/styles/: fonts.css  tailwind.css
utils/: __init__.py  beam_search.py  ical_utils.py  loss.py  matching.py  metrics.py  visualize.py
(+5 files in other folders)
