[project]
name = "crohme-g2g"
version = "0.1.0"
description = "Implementation of Graph-to-Graph HMER (Wu et al. 2021)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "numpy",
    "scipy",
    "tqdm",
    "xmltodict",  # For parsing INKML/LG
    "scikit-learn"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"