[project]
name = "hmer"
version = "0.1.0"
description = "Handwritten Mathematical Expression Recognition using DenseNet + Transformer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy",
    "scipy",
    "Pillow",
    "matplotlib",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"